# CosmicCoPilotAgent

./: .gitignore  README.md  main.py  pyproject.toml
agents/cosmicAICluster/: agent.yaml
agents/cosmicAICluster/tools/: get_all_the_changes_in_cluster_tools.py  kusto_utils.py
